Bug 154039 - [iOS Simulator] accessibility/text-marker/text-marker-range-stale-node-crash.html crashing
Summary: [iOS Simulator] accessibility/text-marker/text-marker-range-stale-node-crash....
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: iPhone / iPad iOS 9.0
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 152130
  Show dependency treegraph
 
Reported: 2016-02-09 10:27 PST by Ryan Haddad
Modified: 2016-02-09 14:58 PST (History)
10 users (show)

See Also:


Attachments
patch (1.67 KB, patch)
2016-02-09 13:01 PST, Nan Wang
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ryan Haddad 2016-02-09 10:27:52 PST
[iOS Simulator] accessibility/text-marker/text-marker-range-stale-node-crash.html crashing

The test was added with r196287 and seems to have crashed on every run:
<https://build.webkit.org/results/Apple%20iOS%209%20Simulator%20Release%20WK2%20(Tests)/r196313%20(2965)/results.html>
<http://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=accessibility%2Ftext-marker%2Ftext-marker-range-stale-node-crash.html>
Comment 1 Nan Wang 2016-02-09 13:01:29 PST
Created attachment 270945 [details]
patch
Comment 2 chris fleizach 2016-02-09 13:08:00 PST
Comment on attachment 270945 [details]
patch

View in context: https://bugs.webkit.org/attachment.cgi?id=270945&action=review

> Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:222
> +    return _cache->characterOffsetForTextMarkerData(_textMarkerData);

presumably this method checks for nodeInUse and .ignore
Comment 3 WebKit Commit Bot 2016-02-09 14:58:20 PST
Comment on attachment 270945 [details]
patch

Clearing flags on attachment: 270945

Committed r196339: <http://trac.webkit.org/changeset/196339>
Comment 4 WebKit Commit Bot 2016-02-09 14:58:23 PST
All reviewed patches have been landed.  Closing bug.