[iOS Simulator] accessibility/text-marker/text-marker-range-stale-node-crash.html crashing https://bugs.webkit.org/show_bug.cgi?id=154039

Reviewed by Chris Fleizach.

We are accessing the derefed node in the CharacterOffset object, we should create an empty
CharacterOffset object if the node is not in use.

It's covered by the test accessibility/text-marker/text-marker-range-stale-node-crash.html.

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityTextMarker characterOffset]):
(-[WebAccessibilityTextMarker isIgnored]):


Canonical link: https://commits.webkit.org/172154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196339 268f45cc-cd09-0410-ab3c-d52691b4dbfc